# sqldelight

./: .editorconfig  .gitattributes  .gitignore  .travis.yml  404.html  ALPHA.md  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE_CANDIDATE.md  RELEASING.md  UPGRADING.md  build.gradle  deploy_website.sh  gradle.properties  gradlew  index.html  mkdocs.yml  renovate.json  runnativetest.sh  runtest.sh  settings.gradle  sitemap.xml  snapshot  update-expected.sh  updateDependencies.gradle  versions.json
.buildscript/: before_linux.sh  deploy_snapshot.sh
.github/: renovate.json
1.5.4/: 404.html  index.html
1.x/: index.html
2.0.0/: 404.html  index.html  sitemap.xml
2.0.0-SNAPSHOT/: 404.html  index.html  sitemap.xml
2.0.0-alpha05/: 404.html  index.html  sitemap.xml
2.0.0-rc01/: 404.html  index.html  sitemap.xml
2.0.0-rc02/: 404.html  index.html  sitemap.xml
2.0.1/: 404.html  index.html  sitemap.xml
2.0.2/: 404.html  index.html  sitemap.xml
2.1.0/: 404.html  index.html  sitemap.xml
2.1.0-SNAPSHOT/: 404.html  index.html  sitemap.xml
2.2.0-SNAPSHOT/: 404.html  index.html  sitemap.xml
2.2.1/: 404.html  index.html  sitemap.xml
2.3.0-SNAPSHOT/: 404.html  index.html  sitemap.xml
2.3.2/: 404.html  index.html  sitemap.xml
2.4.0-SNAPSHOT/: 404.html  index.html  sitemap.xml
android_paging/: index.html
android_sqlite/: index.html
buildLogic/: build.gradle  settings.gradle
buildSrc/: build.gradle.kts
changelog/: index.html
code_of_conduct/: index.html
contributing/: index.html
custom_column_types/: index.html
custom_projections/: index.html
docs/: android_paging.md  android_studio_getting_started.md  code_of_conduct.md  coroutines.md  gradle.md  index.md  migrations.md  multiplatform.md  query_arguments.md  rxjava.md  supported_dialects.md  transactions.md  types.md  upgrading-2.0.md
gradle/: configbintray.gradle  configpublish.gradle  dependencies.gradle  gradle-mvn-mpp-push.gradle  gradle-mvn-push.gradle  index.html  libs.versions.toml  updateDependencies.gradle
intellij_plugin/: index.html
js_sqlite/: index.html
jvm_h2/: index.html
jvm_mysql/: index.html
jvm_postgresql/: index.html
jvm_sqlite/: index.html
latest/: 404.html  index.html
migrations/: index.html
multiplatform/: index.html
multiplatform_sqlite/: index.html
sqldelight-bazel-rules/: .gitignore  BUILD.bazel  BUILD.release.bazel  WORKSPACE  WORKSPACE.release.bazel  intellij.bzl  release.bzl  sqldelight.bzl  sqldelight.jarjar
sqldelight-bazel-rules/actions/: BUILD.bazel  README.md
sqldelight-bazel-rules/actions/java/com/squareup/tools/sqldelight/cli/: Args.kt  BUILD.bazel  CompilerWrapper.kt  ErrorListener.kt  Main.kt  Utils.kt
sqldelight-bazel-rules/samples/: BUILD.bazel
sqldelight-bazel-rules/samples/src/main/java/sqldelight/bazel/rules/samples/: VariableAttribute.java
sqldelight-bazel-rules/samples/src/main/sqldelight/sqldelight/bazel/rules/samples/: oneFourZero.sq
(+134136 files in other folders)
